Fixed off center and scrollable sizes of home, sign in, and create account

--- a/frontend/src/Pages/signin.css
+++ b/frontend/src/Pages/signin.css
@@ -5,6 +5,7 @@
     justify-content: center;
     background-color: var(--charcoal);
     height: 100%;
+    width: 100%;
 }
 
 .login-container {
